<resources>
    <string name="app_name">FloristShop</string>
    <string name="Welcome_message">Welcome to Our Flower Shop.</string>
    <string name="hope_message">Hope you will like this.</string>
    <string name="next_page">This will move image to next page</string>
    <string name="black_rose">BLACK ROSE</string>
    <string name="red_rose">RED ROSE</string>
    <string name="lily">LILY</string>
    <string name="lily_content">Big image of lily flower in detail view</string>
    <string name="description_lily">Lily is a genus of herbaceous flowering plants growing from bulbs, all with large prominent flowers. Lilies are a group of flowering plants which are important in culture and literature in much of the world. Most species are native to the temperate northern hemisphere, though their range extends into the northern subtropics. Many other plants have lilyin their common name but are not related to true lilies.</string>
    <string name="description_red_rose">A rose is a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over three hundred species and thousands of cultivars. They form a group of plants that can be erect shrubs, climbing, or trailing, with stems that are often armed with sharp prickles.</string>
    <string name="rose_content">Big image of Red rose flower in detail view</string>
    <string name="black_rose_content">Big image of Black rose flower in detail view</string>
    <string name="count_initial_value">0</string>
    <string name="quantity">Quantity</string>
    <string name="price_lily">$15</string>
    <string name="price_red_rose">$11</string>
    <string name="price_black_rose">$10</string>
    <string name="total_label">TOTAL</string>
    <string name="initial_value">0</string>
    <string name="final_amount_label">Final Amount</string>
    <string name="q_s_t_label">Q.S.T</string>
    <string name="g_s_t_label">G.S.T</string>
    <string name="dollar_sign">$</string>
    <string name="shipping_details_title">SHIPPING DETAILS</string>
    <string name="shipping_method_title">SHIPPING METHOD</string>
    <string name="express_shipping_button_label">Express Shipping</string>
    <string name="standard_shipping_button_label">Standard Shipping</string>
    <string name="store_pickup_button_label">Store Pickup</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="address_label">Address</string>
    <string name="city_label">City</string>
    <string name="zip_code_label">Zip code</string>
    <string name="e_mail_label">E-mail</string>
    <string name="phone_label">Phone</string>
    <string name="_000_000_0000_phone">(000)000–0000</string>
    <string name="payment_mode_label">PAYMENT MODE</string>
    <string name="credit_debit_card_label">Credit / Debit Card</string>
    <string name="on_delivery_label">On Delivery</string>
    <string name="proceed_to_checkout_button">Proceed to Checkout</string>
    <string name="confirm_order_label">CONFIRM ORDER</string>
    <string name="your_order_label">YOUR ORDER</string>
    <string name="increment_label">Increment</string>
    <string name="decrement_label">Decrement</string>
    <string name="place_order_button_label">PLACE ORDER</string>
    <string name="has_been_label">HAS BEEN</string>
    <string name="confirm_label">CONFIRM</string>
    <string name="blinking_done_image">Blinking Done Image</string>
    <string name="your_total_billing_amount_label">Your Total Billing Amount</string>
</resources>
