<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ConfirmationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/text_your_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_order_label"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/text_has_been"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/has_been_label"
            android:textAlignment="center"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/text_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_label"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/image_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blinking_done_image"
            android:src="@drawable/ic_done_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_total_billing_amount_label"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_total_bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_initial_value"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>