<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_lily"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_lily"
                    android:layout_width="125dp"
                    android:layout_gravity="center"
                    android:layout_height="125dp"
                    android:src="@drawable/lily_flower"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView_lily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/lily"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/textView_lily_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/price_lily"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_red"
            android:layout_below="@+id/card_view_lily"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_red_rose"
                    android:layout_width="125dp"
                    android:layout_gravity="center"
                    android:layout_height="125dp"
                    android:src="@drawable/red_rose_flower"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_red_rose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/red_rose"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView_red_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/price_red_rose"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="italic" />
            </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_black"
            android:layout_below="@+id/card_view_red"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_black_rose"
                    android:layout_width="125dp"
                    android:layout_gravity="center"
                    android:layout_height="125dp"
                    android:src="@drawable/black_rose_flower"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="1dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_black_rose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/black_rose"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView_black_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/price_black_rose"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="italic" />

            </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_below="@+id/card_view_black"
            android:id="@+id/fab_checkout"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_add_shopping_cart_black_24dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentRight="true"
            />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>